@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1383 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1384 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -599,3 +599,6 @@ Changes from NetBSD 5.0 to NetBSD 6.0:
 		The database cache for services(5) has been updated to use
 		this. services_mkdb(8) can still be used to create the old
 		format. [joerg 20100425]
+	tftpd(8): Add -w so files can be uploaded without requiring them
+		to be created before the upload. See the section on security 
+		considerations before enabling. [hubertf 20100429]
